--- a/nlp/admin/web/src/app/applications/user/user-logs.component.scss
+++ b/nlp/admin/web/src/app/applications/user/user-logs.component.scss
@@ -13,23 +13,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-.builds {
-  margin-top: 20px;
-}
-
-.builds-table {
-  width: 100%;
-}
-
-.data {
-  max-width: 50px;
-}
-
-.error {
-  max-width: 50px;
-}
-
-.table thead tr th p {
-  font-weight: bold;
+.error-icon {
+  padding-top: 10px;
 }
