--- a/nlp/admin/web/src/app/applications/application/application.component.html
+++ b/nlp/admin/web/src/app/applications/application/application.component.html
@@ -121,6 +121,7 @@
 
         <input
           nbInput
+          fullWidth
           type="number"
           id="treshold"
           placeholder="Unknown intent threshold"
@@ -179,6 +180,7 @@
         </label>
 
         <nb-select
+          fullWidth
           status="primary"
           (selectedChange)="addLocale()"
           [(ngModel)]="newLocale"
