[DERCBOT-815] rag settings improvement (#285)
* Open list inputs. Removal of model param in Azure

* Error display

* Debug infos in a window

* Expand all json

--- a/bot/admin/web/src/app/rag/rag-settings/rag-settings-input/rag-settings-input.component.html
+++ b/bot/admin/web/src/app/rag/rag-settings/rag-settings-input/rag-settings-input.component.html
@@ -52,6 +52,15 @@
         </nb-select>
       </ng-container>
 
+      <ng-container *ngIf="configurationParam.type === 'openlist'">
+        <tock-autocomplete-input
+          fieldSize="small"
+          placeholder=""
+          [formControl]="form.get(parentGroup).get(configurationParam.key)"
+          [options]="configurationParam.source"
+        ></tock-autocomplete-input>
+      </ng-container>
+
       <ng-container *ngIf="configurationParam.type === 'number'">
         <tock-slider
           min="0"
