--- a/bot/admin/web/src/app/shared/components/autocomplete-input/autocomplete-input.component.html
+++ b/bot/admin/web/src/app/shared/components/autocomplete-input/autocomplete-input.component.html
@@ -6,6 +6,7 @@
   [name]="name"
   [placeholder]="placeholder"
   [disabled]="disabled"
+  [fieldSize]="fieldSize"
   [nbAutocomplete]="autocomplete"
   [fullWidth]="fullWidth"
   [value]="value"
