--- a/bot/admin/web/src/app/shared/components/slider/slider.component.html
+++ b/bot/admin/web/src/app/shared/components/slider/slider.component.html
@@ -27,7 +27,7 @@
     (change)="changeValue($event)"
     [disabled]="disabled"
   />
-  <div class="range-slider-value">
+  <div class="range-slider-value text-right">
     {{ value }}
   </div>
 </div>
