[DERCBOT-814] IA Orchestrator Client - Call RAG & Connect the RAG Story (#288)
* [DERCBOT-814] IA Orchestrator Client - Call RAG Api & Handle the RAG Story

* [DERCBOT-814] Upgrade langchain

--- a/bot/admin/web/src/app/shared/components/chat-ui/chat-ui-message/chat-ui-message-sentence-footnotes/chat-ui-message-sentence-footnotes.component.html
+++ b/bot/admin/web/src/app/shared/components/chat-ui/chat-ui-message/chat-ui-message-sentence-footnotes/chat-ui-message-sentence-footnotes.component.html
@@ -12,10 +12,10 @@
 
 <div
   class="footnotes mt-1"
-  *ngIf="sentence.footNotes?.length"
+  *ngIf="sentence.footnotes?.length"
 >
   <strong class="title mr-1">SOURCES : </strong>
-  <span *ngFor="let footNote of sentence.footNotes; let last = last">
+  <span *ngFor="let footNote of sentence.footnotes; let last = last">
     <a
       [href]="footNote.url"
       target="_blank"
