Search input : avoid to fire clear shortcut when pressing enter key

--- a/bot/admin/web/src/app/shared/components/sentence-training/sentence-training-filters/sentence-training-filters.component.html
+++ b/bot/admin/web/src/app/shared/components/sentence-training/sentence-training-filters/sentence-training-filters.component.html
@@ -22,10 +22,10 @@
             *ngIf="!!getFormControl('search').value"
             nbButton
             nbSuffix
-            nbTooltip="Clear"
             ghost
+            nbTooltip="Clear"
+            type="button"
             (click)="resetControl(getFormControl('search'))"
-            data-testid="clear-button"
           >
             <nb-icon icon="close-outline"></nb-icon>
           </button>
