Hide rag exclusion controls

--- a/bot/admin/web/src/app/shared/components/sentence-training/sentence-training-filters/sentence-training-filters.component.html
+++ b/bot/admin/web/src/app/shared/components/sentence-training/sentence-training-filters/sentence-training-filters.component.html
@@ -157,9 +157,9 @@
               >
                 {{ unknownIntent.label }}
               </nb-option>
-              <nb-option [value]="ragExcludedIntent">
+              <!-- <nb-option [value]="ragExcludedIntent">
                 {{ ragExcludedIntent.label }}
-              </nb-option>
+              </nb-option> -->
             </nb-autocomplete>
           </div>
 
@@ -482,9 +482,9 @@
             >
               {{ unknownIntent.label }}
             </nb-option>
-            <nb-option [value]="ragExcludedIntent">
+            <!-- <nb-option [value]="ragExcludedIntent">
               {{ ragExcludedIntent.label }}
-            </nb-option>
+            </nb-option> -->
           </nb-autocomplete>
 
           <div class="my-2 tools-columns">
