--- a/bot/admin/web/src/app/shared/components/sentence-training/sentence-training.component.html
+++ b/bot/admin/web/src/app/shared/components/sentence-training/sentence-training.component.html
@@ -79,7 +79,7 @@
             >
               <nb-icon icon="question-mark-circle-outline"></nb-icon>
             </button>
-            <button
+            <!-- <button
               *ngIf="sentenceTrainingMode !== SentenceTrainingMode.RAGEXCLUDED"
               nbButton
               nbTooltip="Set all selected sentences as ragexcluded"
@@ -93,7 +93,7 @@
                 icon="ragexclude"
                 pack="tock-custom"
               ></nb-icon>
-            </button>
+            </button> -->
             <button
               nbButton
               nbTooltip="Delete all selected sentences"
